# sanshu

./: .gitignore  CLAUDE.md  Cargo.toml  package.json  pnpm-lock.yaml  sanshu_prompt_word.md  vitest.config.ts  vitest.setup.ts
.claude/: index.json
.doc/agent-teams/: README.md
.doc/agent-teams/plans/: 20260218-context-retrieval-parallel-plan.md  20260220-fts5-integration-plan.md  20260220-memory-complete-implementation-plan.md  20260220-memory-p2-implementation-plan.md  interface-contract.md
.doc/agent-teams/progress/: 20260220-fts5-integration-final-report.md  20260220-fts5-integration-progress.md  20260220-fts5-integration-summary.md  T8-completion-report.md  T9-completion-report.md
.doc/agent-teams/research/: 20260217-ace-free-alternative-research.md  20260218-context-retrieval-research.md  20260220-fts5-integration-research.md  20260220-memory-remaining-tasks-constraints.md
.doc/agent-teams/reviews/: 20260218-ace-free-alternative-review.md  20260220-memory-p2-review.md
.doc/agent-teams/wip/: .gitignore
.doc/common/: README.md
.doc/common/plans/: 20260222-enhance-degradation-chain-plan.md
.doc/spec/: README.md
.doc/spec/archive/: 20260219-context-retrieval-archived.md  20260220-memory-optimization-archived.md
.doc/spec/constraints/: 20260219-memory-optimization-constraints.md
.doc/spec/plans/: 20260219-context-retrieval-plan.md  20260219-memory-optimization-plan.md
.doc/spec/proposals/: 20260219-memory-optimization-proposal.md
.doc/spec/reviews/: 20260219-context-retrieval-impl-report.md  20260219-context-retrieval-review.md  20260219-memory-optimization-impl-report.md  20260220-memory-optimization-review.md
.doc/standards-agent/: dual-model-orchestration.md  model-calling.md
.doc/workflow/: README.md
.doc/workflow/plans/: 20260218-ace-free-alternative-impl-plan.md
.doc/workflow/research/: 20260219-memory-optimization-analysis.md
.doc/workflow/reviews/: 20260218-ace-free-alternative-review.md
agents/ccg/: team-exec-agent.md  team-plan-agent.md
agents/ccg/_templates/: multi-model-gate.md
skills/collab/: SKILL.md  executor.md  renderer.md  reporter.md  state-machine.md
src/frontend/: App.vue  CLAUDE.md  main.ts
src/frontend/components/: AppContent.vue  (+2 more)
(+128 files in other folders)
