[package]
name = "sanshu"
version = "0.5.0"
edition = "2021"
default-run = "等一下"

[lib]
path = "src/rust/lib.rs"

[[bin]]
name = "等一下"
path = "src/rust/main.rs"

[[bin]]
name = "三术"
path = "src/rust/bin/mcp_server.rs"

[dependencies]
tauri = { version = "2.0", features = [
  "tray-icon",
  "image-ico",
  "image-png"
] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.0", features = [
  "rt-multi-thread", # MCP服务器和异步任务需要
  "macros", # #[tokio::main] 宏需要
  "fs", # 文件操作需要
  "process", # Command::new() 需要
  "sync", # oneshot channel 需要
  "time" # sleep() 需要
] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = [ "v4" ] }
chrono = { version = "0.4", features = [ "serde" ] }
dirs = "5.0"
# 使用 crates.io 稳定版本，避免上游 git 仓库变动导致编译失败
rmcp = { version = "0.12.0", features = [
  "server",
  "transport-io"
] }
schemars = "0.8"
rodio = "0.19"
reqwest = { version = "0.11", features = [
  "stream",
  "json",
  # 中文注释：启用 SOCKS5 代理支持（ProxyType::Socks5 / socks5://...）。
  "socks"
] }
futures-util = "0.3"
base64 = "0.21"
rust-embed = "8.0"
teloxide = { version = "0.15.0", features = [ "macros" ] }
regex = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
percent-encoding = "2.3"
ring = "0.17"
hex = "0.4"
ignore = "0.4"
encoding_rs = "0.8"
globset = "0.4"
notify = "6.0"
notify-debouncer-full = "0.3"
once_cell = "1.19"
rand = "0.8"
fastrand = "2.0"
zip = "7.0.0"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.4.2"
csv = "1.3"
bincode = "1.3"

# 图标工坊 - SVG 转 PNG 支持
resvg = "0.38"
usvg = "0.38"
tiny-skia = "0.11"

# HC-9: API 密钥安全存储
keyring = "2.3"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dev-dependencies]
# 中文注释：用于单元测试中的临时目录（例如 memory/migration.rs）
tempfile = "3.10"

[features]
default = []
# 使用 tauri 的 custom-protocol，避免依赖 devUrl 加载前端资源
custom-protocol = ["tauri/custom-protocol"]

# 发布版本优化配置
[profile.release]
opt-level = "z" # 优化体积而非速度
lto = true # 链接时优化，减少最终二进制大小
codegen-units = 1 # 减少代码生成单元，提高优化效果
panic = "abort" # 减少panic处理代码
strip = true # 移除调试符号
